<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.nrbsistemas.finance11.LoginActivity">

    <ImageView
        android:id="@+id/img_click"

        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/unnamed" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        android:hint="@string/str_login"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:layout_below="@+id/img_click"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/str_senha"
        android:inputType="textPassword"
        android:maxLength="20"
        android:layout_alignBottom="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/edt_login"
        android:layout_alignEnd="@+id/edt_login">

    </LinearLayout>

    <Button
        android:id="@+id/btn_logar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_logar"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/txt_cad"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txt_cad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/str_primeiro"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="16dp"
        android:layout_above="@+id/inc_booton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <include
        android:id="@+id/inc_booton"
        layout="@layout/toolbar_botton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"></include>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbk_mantenha"
        android:layout_alignBaseline="@+id/ckb_conectado"
        android:layout_alignBottom="@+id/ckb_conectado"
        android:layout_toLeftOf="@+id/linearLayout"
        android:layout_toStartOf="@+id/linearLayout" />

    <CheckBox
        android:id="@+id/ckb_conectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_senha"
        android:layout_alignLeft="@+id/edt_senha"
        android:layout_alignStart="@+id/edt_senha" />
</RelativeLayout>
